@@ -115,11 +115,16 @@ QPDF_Dictionary::getAsMap() const
 }
 
 void
-QPDF_Dictionary::replaceKey(
-    std::string const& key, QPDFObjectHandle const& value)
+QPDF_Dictionary::replaceKey(std::string const& key, QPDFObjectHandle value)
 {
-    // add or replace value
-    this->items[key] = value;
+    if (value.isNull()) {
+        // The PDF spec doesn't distinguish between keys with null
+        // values and missing keys.
+        removeKey(key);
+    } else {
+        // add or replace value
+        this->items[key] = value;
+    }
 }
 
 void
@@ -127,15 +132,4 @@ QPDF_Dictionary::removeKey(std::string const& key)
 {
     // no-op if key does not exist
     this->items.erase(key);
-}
-
-void
-QPDF_Dictionary::replaceOrRemoveKey(
-    std::string const& key, QPDFObjectHandle value)
-{
-    if (value.isNull()) {
-        removeKey(key);
-    } else {
-        replaceKey(key, value);
-    }
 }
